Fix footer position + body overflow

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 24px;
+    padding: 24px 24px 0 24px;
     min-height: 100vh;
     font-family: var(--main-font), 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--Pale-blue);
@@ -26,7 +26,7 @@ body{
     background-repeat: no-repeat;
     background-size: auto 194px;
     background-position: top center;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 main{
     display: flex;
@@ -147,8 +147,7 @@ main{
     color: var(--Dark-blue);
 }
 footer{
-    position: absolute;
-    bottom: 0;
+    margin-top: 24px;
     padding-bottom: 8px;
     text-align: center;
     font-size: 14px;
